# ChangeLog for net-misc/wicd
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/wicd/ChangeLog,v 1.64 2010/01/10 01:54:16 darkside Exp $

*wicd-1.7.0_beta5 (10 Jan 2010)

  10 Jan 2010; Jeremy Olexa <darkside@gentoo.org> -wicd-1.7.0_beta4.ebuild,
  +wicd-1.7.0_beta5.ebuild:
  Number of small fixes, including gentoo bugs 299674 & 299878

*wicd-1.7.0_beta4 (04 Jan 2010)

  04 Jan 2010; Jeremy Olexa <darkside@gentoo.org> -wicd-1.7.0_alpha3.ebuild,
  +wicd-1.7.0_beta4.ebuild:
  Version bump, more small changes in prep for a final release. Fixes Gentoo
  bug #299206 & #296197

*wicd-1.7.0_alpha3 (24 Dec 2009)

  24 Dec 2009; Jeremy Olexa <darkside@gentoo.org> -wicd-1.7.0_alpha2.ebuild,
  +wicd-1.7.0_alpha3.ebuild:
  Version bump for next alpha release, fixes bugs in 1.7 development

*wicd-1.7.0_alpha2 (02 Dec 2009)

  02 Dec 2009; Jeremy Olexa <darkside@gentoo.org> -wicd-1.7.0_alpha1.ebuild,
  +wicd-1.7.0_alpha2.ebuild:
  Version bump to fix bugs with the first alpha release

*wicd-1.7.0_alpha1 (01 Dec 2009)

  01 Dec 2009; Jeremy Olexa <darkside@gentoo.org> -wicd-1.5.9-r1.ebuild,
  -wicd-1.6.2.ebuild, wicd-1.6.2.2.ebuild, +wicd-1.7.0_alpha1.ebuild,
  metadata.xml:
  Removed old versions. Limit urwid dep on 1.6.2.2 (bug #295033). Version
  bump to 1.7.0_alpha1 which has major tray changes and many minor changes
  including an ability to not install the gtk UI (bug #293538)

  30 Nov 2009; Joseph Jezak <josejx@gentoo.org> wicd-1.6.2.2.ebuild:
  Marked ppc/ppc64 stable.

  26 Nov 2009; Markus Meier <maekke@gentoo.org> wicd-1.6.2.2.ebuild:
  amd64/x86 stable, bug #294626

  08 Nov 2009; Joseph Jezak <josejx@gentoo.org> wicd-1.6.2.ebuild,
  wicd-1.6.2.2.ebuild:
  Marked ~ppc64 for bug #280312.

  22 Sep 2009; Markus Meier <maekke@gentoo.org> wicd-1.6.2.ebuild:
  x86 stable, bug #282382

*wicd-1.6.2.2 (06 Sep 2009)
