@@ -1,7 +1,7 @@
 AUX wicd-init.d 434 RMD160 408065ff312ab595022f777853c15031bab17dcf SHA1 87426d2958c9e4bfff9b8ea48d5857d9e67aa191 SHA256 5546deda3d5fa8f6ee1125922f1217182b24d68a22f5a1212509bb13bf0156e2
 DIST wicd-1.6.2.2.tar.gz 464976 RMD160 38a5c84a6384c1e6563ecc51e478c633b7cc8a00 SHA1 97e66d550ebc483a699c8e87482f82c9185bc0c8 SHA256 2ca57c71a2415fa0d971dcecdb5541a1f93a80fc7756e46923d166591d97de23
-DIST wicd-1.7.0b5.tar.bz2 410793 RMD160 d064f8a181a0df79f171e5e70bbc11058d1492bb SHA1 ca5e0d361268f5aa8190d8162b13ed5edb421850 SHA256 95b3678bfed391cb12a5fc58211ab3b161f9013fdc1849bb058607ad32513375
+DIST wicd-1.7.0.tar.bz2 411166 RMD160 66893e4043ba7e96996d698f847c0ab3b350df6a SHA1 1cd087f53538b1f6e1cfad9735c87741e05698f6 SHA256 14c5692bf8a4c93c9ac083ce9ad677b0d9022b19f84e777854766b2a6f753b32
 EBUILD wicd-1.6.2.2.ebuild 2623 RMD160 5d56df8fe994934370c2e27d42074a9ad4aeaf03 SHA1 41f0390d6e099429eb6d494c73f9e98189bc41e5 SHA256 58156ceffa25802a08c84377124254a71121bd7f28716f5d2da36b7f5c4a18c8
-EBUILD wicd-1.7.0_beta5.ebuild 2884 RMD160 c20a126c316d16c561a7efa27c501fa9942e6948 SHA1 e197f4fd68a44e7c29c590a8a706e4502e2690aa SHA256 8c91edf5dd08939134d6b34a51da69359cacee26b553c3e42d2abb30824462dc
-MISC ChangeLog 12308 RMD160 6005c821366176c109ba2b5aabda17790379ee7b SHA1 0e2c6e27c1536d9db0d2e3cdcb2514d8e5e24225 SHA256 f82e371ea5a8acf73017b611d917b7c1197bb40064d141d0f31d4c961feeeb76
+EBUILD wicd-1.7.0.ebuild 2832 RMD160 3b53bad34b941d5b1be2ea9f51dbf2a855a01a79 SHA1 7db846d5fd343771c7214a97d1277ea89b9337f3 SHA256 d5fafd4037deca3167e08c952a615418b67a5aef52b0e49b1f9774c84d2392be
+MISC ChangeLog 12470 RMD160 18482f31a1afcee5d69602aa7e6013cd7d13f642 SHA1 4fdfa275bf2b075752e6b62d9e66ff279879121d SHA256 ad0c8dc2f4c1d369c7cfe11499c0ce8dfadfa617641a2adc33a4b8ebe572a83b
 MISC metadata.xml 684 RMD160 dc51b5c7f84f2c476614fe1b1f21346173c1e21d SHA1 4d50cc373bf17369ea360f34e76109a685443670 SHA256 a7fc7ee6f63766f3a2fb4a8d204a8fca80591dca0a2783d8094911b24587a866
