@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/wicd
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/wicd/ChangeLog,v 1.64 2010/01/10 01:54:16 darkside Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/wicd/ChangeLog,v 1.65 2010/01/15 15:03:46 darkside Exp $
+
+*wicd-1.7.0 (15 Jan 2010)
+
+  15 Jan 2010; Jeremy Olexa <darkside@gentoo.org> -wicd-1.7.0_beta5.ebuild,
+  +wicd-1.7.0.ebuild:
+  Version bump, final 1.7.0 release
 
 *wicd-1.7.0_beta5 (10 Jan 2010)
 
